# mcp-policy-testkit

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mcp_policy_testkit.md  pyproject.toml
.github/workflows/: ci.yml  example-scan.yml
docs/: architecture.md  custom-rules.md  rule-catalog.md
examples/insecure_server/: mcp.json  server.py
examples/secure_server/: mcp.json
src/mcp_policy_testkit/: __init__.py  cli.py  models.py  parser.py  remote.py  scanner.py  utils.py
src/mcp_policy_testkit/reporting/: __init__.py  json_output.py  markdown.py  sarif.py  terminal.py
src/mcp_policy_testkit/rules/: __init__.py  base.py  config_rules.py  registry.py  shadow_rules.py  source_rules.py  tool_rules.py
tests/: test_cli.py  test_mcp_handshake.py  test_remote.py  test_reporting.py  test_scanner.py
tests/fixtures/: mock_mcp_stdio_server.py  remote_tools.json
